Bug 368253 - Python import fails to import variable initializers with negative numbers
Summary: Python import fails to import variable initializers with negative numbers
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.20.1 (KDE Applications 16.08.1)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-05 07:13 UTC by Ralf Habacker
Modified: 2016-09-05 08:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.2 (KDE Applications 16.08.2)
Sentry Crash Report:


Attachments
test case (989 bytes, text/x-python)
2016-09-05 07:13 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-09-05 07:13:07 UTC
Python code containing class or instance variables with negative number as initializers are not imported correctly.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. switch active language to python
3. import the appended test case

Actual Results:  
Negative float numbers are not imported correctly.


Expected Results:  
Negative numbers should be imported correctly.
Comment 1 Ralf Habacker 2016-09-05 07:13:28 UTC
Created attachment 100931 [details]
test case
Comment 2 Ralf Habacker 2016-09-05 08:35:36 UTC
Git commit f63d986d50098dec9b4e97aea510dbc9ce781bb4 by Ralf Habacker.
Committed on 05/09/2016 at 08:23.
Pushed by habacker into branch 'Applications/16.08'.

Fix 'Python import fails to import variable initializers with negative numbers'.
FIXED-IN:2.20.2 (KDE Applications 16.08.2)

M  +6    -2    test/import/python/types.py
M  +6    -3    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/f63d986d50098dec9b4e97aea510dbc9ce781bb4