Fix 'Python import fails to import variable initializers with negative numbers'.

BUG:368253
FIXED-IN:2.20.2 (KDE Applications 16.08.2)